feat: configuración parametrizable por
Es necesario indicar este parámetro en el VM OPTIONS
-DcustomFile=config-mac.properties